# fly

./: .gitignore  Cargo.toml  fly.go  go.mod  go.sum
cmd/: join.go  root.go
src/: cert.pem  cert.rs  err.rs  fetch.rs  fly.rs  key.pem  main.rs  serve.rs  spread.rs
src/fly/: cert.rs  err.rs
