[package]
name = "fly"
version = "0.1.0"
authors = ["Tom Palmer <tjpalmer@tjpalmer.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
clap = "2.33.0"
dirs = "1.0.5"
failure = "0.1.5"
futures = "0.1.27"
hyper = "0.12.29"
hyper-rustls = "0.16.1"
rcgen = {features = ["x509-parser"], version = "0.4.0"}
ring = "0.14.6"
# TODO Don't do anything insecure.
rustls = {features = ["dangerous_configuration"], version = "0.15.2"}
tokio = "0.1.20"
tokio-rustls = "0.9.3"
tokio-tcp = "0.1.3"
untrusted = "0.6.2"
webpki = "0.19.1"

[profile.release]
opt-level = 'z'
# Enable for slow small build.
# lto = true
# codegen-units = 1
panic = 'abort'
